fixes callsign on safari

--- a/components/callsign/stylesheets/index.styl
+++ b/components/callsign/stylesheets/index.styl
@@ -21,6 +21,7 @@
 .call-sign__icon
   position absolute
   top 0
+  width 100%
   svg
     width 100%
     height 100%
